--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
     "nodemon": "^3.0.1",
+    "fs-extra": "^11.1.1",
     "cookie-parser": "^1.4.7",
     "googleapis": "^169.0.0"
   },
