--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "dotenv": "^16.3.1",
+    "node-cron": "^3.0.3",
+    "axios": "^1.6.2",
     "cookie-parser": "^1.4.7",
-    "googleapis": "^169.0.0",
-    "dotenv": "^16.3.1"
+    "googleapis": "^169.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
